[package]
name = "constgebra"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/knickish/constgebra"
description = "Const Linear Algebra"
keywords = ["const", "soft", "linear", "matrix", "vector", "math"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_soft_float = "0.1.2"

[dev-dependencies]
pretty_assertions = "1"