[package]
name = "constgebra"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/knickish/constgebra"
description = "Const Linear Algebra"
keywords = ["const", "linear", "matrix", "vector", "math"]
categories = ["no-std"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_soft_float = { version = "^0.1.2", features = ["no_std"] }

[dev-dependencies]
pretty_assertions = "1"
